# sweepy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.githooks/: commit-msg
.github/workflows/: release.yml
src/: cleaner.rs  cli.rs  config.rs  constants.rs  lib.rs  main.rs  scanner.rs  units.rs  utils.rs  validation.rs
