[package]
name = "sweepy"
version = "0.3.1"
edition = "2024"
description = "Find and remove stale build artifacts across your projects"
license = "MIT"
repository = "https://github.com/Pavel-Surkov/sweepy"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "=3.1.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
walkdir = "2.5.0"
